--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,15 +1,16 @@
 {
-	"env": {
-		"browser": true,
-		"es2021": true
-	},
-	"extends": "eslint:recommended",
-	"parserOptions": {
-		"ecmaVersion": 12,
-		"sourceType": "module"
-	},
-	"rules": {
-		"quotes": ["error", "single"],
-		"semi": ["error", "never"]
-	}
+  "env": {
+    "node": true,
+    "browser": true,
+    "es2021": true
+  },
+  "extends": "eslint:recommended",
+  "parserOptions": {
+    "ecmaVersion": 12,
+    "sourceType": "commonjs"
+  },
+  "rules": {
+    "quotes": ["error", "single"],
+    "semi": ["error", "never"]
+  }
 }
