--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"format": "prettier --write .",
-		"prepare": "husky"
+		"prepare": "husky",
+		"lint": "eslint ."
 	},
 	"repository": {
 		"type": "git",
