--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
 	"name": "genius-memory-game",
 	"version": "1.0.0",
 	"description": "A memory game like a Simon",
-	"type": "module",
+	"main": "index.js",
 	"scripts": {
-		"dev": "vite",
-		"build": "vite build",
-		"preview": "vite preview"
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"format": "prettier --write .",
+		"prepare": "husky",
+		"lint": "eslint ."
 	},
 	"repository": {
 		"type": "git",
@@ -23,25 +24,16 @@
 		"@commitlint/config-conventional": "^19.6.0",
 		"@eslint/eslintrc": "^3.2.0",
 		"@eslint/js": "^9.18.0",
-		"@types/node": "^22.12.0",
-		"@types/react-dom": "^19.0.3",
 		"eslint": "^9.18.0",
 		"globals": "^15.14.0",
 		"husky": "^9.1.7",
 		"lint-staged": "^15.3.0",
-		"prettier": "^3.4.2",
-		"typescript": "^5.7.3",
-		"vite": "^6.0.11"
+		"prettier": "^3.4.2"
 	},
 	"lint-staged": {
 		"*.js": [
 			"eslint --fix",
 			"prettier --write"
 		]
-	},
-	"dependencies": {
-		"@vitejs/plugin-react": "^4.3.4",
-		"react": "^19.0.0",
-		"react-dom": "^19.0.0"
 	}
 }
