--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,7 +42,9 @@
 	},
 	"dependencies": {
 		"@vitejs/plugin-react": "^4.3.4",
+		"intro.js": "^7.2.0",
 		"react": "^19.0.0",
-		"react-dom": "^19.0.0"
+		"react-dom": "^19.0.0",
+		"react-router-dom": "^7.1.5"
 	}
 }
