--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,7 +41,9 @@
 		]
 	},
 	"dependencies": {
+		"@gsap/react": "^2.1.2",
 		"@vitejs/plugin-react": "^4.3.4",
+		"gsap": "^3.12.7",
 		"intro.js": "^7.2.0",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
