--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,8 +41,12 @@
 		]
 	},
 	"dependencies": {
+		"@emotion/react": "^11.14.0",
+		"@emotion/styled": "^11.14.0",
 		"@gsap/react": "^2.1.2",
+		"@mui/material": "^6.4.8",
 		"@vitejs/plugin-react": "^4.3.4",
+		"axios": "^1.8.4",
 		"gsap": "^3.12.7",
 		"intro.js": "^7.2.0",
 		"react": "^19.0.0",
