--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
 	"bugs": {
 		"url": "https://github.com/DanielObara/Genius-Memory-Game/issues"
 	},
-	"homepage": "https://github.com/DanielObara/Genius-Memory-Game#readme",
+	"homepage": "https://github.com/DanielObara/Genius-Memory-Game",
 	"devDependencies": {
 		"@commitlint/cli": "^19.6.1",
 		"@commitlint/config-conventional": "^19.6.0",
