--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
 		"@types/node": "^22.12.0",
 		"@types/react-dom": "^19.0.3",
 		"eslint": "^9.18.0",
+		"gh-pages": "^6.3.0",
 		"globals": "^15.14.0",
 		"husky": "^9.1.7",
 		"lint-staged": "^15.3.0",
