--- a/frontend/package.json
+++ b/frontend/package.json
@@ -54,6 +54,7 @@
 		"intro.js": "^7.2.0",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
-		"react-router-dom": "^7.1.5"
+		"react-router-dom": "^7.1.5",
+		"universal-cookie": "^8.0.1"
 	}
 }
